# Mini-Engine-With-Games

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_RU.md  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/: pull_request_template.md
.github/workflows/: windows-build.yml
Core/App/: AppContext.cpp  AppContext.h  Application.cpp  Application.h  FatalErrorReport.cpp  FatalErrorReport.h  IGame.h  IGameHost.h
Core/Assets/: AssetCache.cpp
Core/Audio/: AudioSystem.cpp  AudioSystem.h
Core/Common/: Constants.h
Core/Data/: Cube.fbx  Sphere.fbx
Core/Editor/: TransformGizmoService.cpp  TransformGizmoService.h
Core/Gameplay/: AttachmentTransformHelpers.cpp  AttachmentTransformHelpers.h  CollisionDebugDraw.cpp  CollisionDebugDraw.h  CollisionSystem.cpp  Entity.cpp  Entity.h  GameplayComponents.h  RenderSystem.cpp  Scene.cpp  Scene.h  SceneCollisionTypes.h  SphereStaticWorldCollisionResolver.cpp  SphereStaticWorldCollisionResolver.h
Core/Graphics/: Camera.h  D3d11Helpers.h  FollowCamera.cpp  FollowCamera.h  FpsCamera.cpp  FpsCamera.h  GraphicsDevice.cpp  GraphicsDevice.h  MeshData.h  MeshGenerator.cpp  MeshGenerator.h  ModelAsset.cpp  ModelAsset.h  ModelAssetAssimp.cpp  ModelRenderer.cpp  ModelRenderer.h  ObjectConstants.h  OrbitCamera.cpp  OrbitCamera.h  PrimitiveRenderer3D.cpp  PrimitiveRenderer3D.h  ProjectionMode.h  ShaderCompiler.cpp  Vertex3D.h
Core/Graphics/Picking/: GBufferPickingService.cpp  GBufferPickingService.h
Core/Graphics/Rendering/: ForwardPhongGpuUpload.cpp  ForwardPhongGpuUpload.h  PrimitiveRenderer3D.cpp  RenderContext.h  (+2 more)
Core/Input/: InputSystem.cpp  InputSystem.h  Keyboard.cpp  Keyboard.h  RawInputHandler.cpp  RawInputHandler.h
Core/Math/: DXIncludes.h  MathHelpers.h  OrbitMath.cpp  SpatialMath.h  Transform3D.cpp  Transform3D.h
Core/Physics/: AABB.h  CollisionSystem.cpp  CollisionSystem.h  UniformSpatialGrid3D.cpp  UniformSpatialGrid3D.h
Core/Platform/: Window.cpp  Window.h
Core/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
Core/Shaders/: Basic3D.hlsl  DeferredComposite3D.hlsl  DeferredGeometry3D.hlsl  DeferredLighting3D.hlsl  ForwardPhong3D.hlsl  GBufferDebugComposite3D.hlsl  GBufferPickResolve.hlsl  ShadowDepth3D.hlsl
Core/UI/: BitmapFont.cpp  Button.cpp  Button.h
Game/Common/: MiniGameNavigation.cpp  MiniGameNavigation.h
Game/Katamari/: KatamariGame.cpp  KatamariGame.h  KatamariLevelSetup.cpp  KatamariLevelSetup.h  KatamariSceneLighting.cpp  KatamariSphereColliderWorld.h  KatamariTypes.h
Game/LightingTest/: LightingTestGame.cpp
Game/MainMenu/: MainMenuGame.cpp  MainMenuGame.h
Game/Pong/: PongGame.cpp  PongGame.h  PongScene.cpp  PongScene.h  PongTypes.h
Game/SolarSystem/: SolarSystemGame.cpp  SolarSystemGame.h  SolarSystemScene.cpp  SolarSystemScene.h
(+97 files in other folders)
